tests/success/simple_if_then_else_then_valued.tig
if 1 then (print("output\n"); 25)
     else (print("wrong output\n"); 15)
