tests/fail/expression_sequence_returns_last_value.tig
if (1; "abc") then (1; "abc") else ("abc"; 1)
